# cmake-example

./: CMakeLists.txt  CMakePresets.json  Makefile  app.c  cmake.sh  compile_commands.json
drivers/shape/: CMakeLists.txt  shape.h
drivers/square/: CMakeLists.txt  square.h
kernel/: CMakeLists.txt  app.c
kernel64/: CMakeLists.txt  SRAM.ld  SRAM.scat  entry.S  macros.h  memlayout.h  param.h  start.c  types.h  vm.h
shape/: CMakeLists.txt  shape.c
square/: CMakeLists.txt  square.c
toolchain/: clang.cmake  clang.x86.cmake
